--- a/web/src/components/LatestCommit/LatestCommit.module.scss
+++ b/web/src/components/LatestCommit/LatestCommit.module.scss
@@ -36,3 +36,13 @@
     flex-shrink: inherit;
   }
 }
+
+.popover {
+  :global {
+    .bp3-popover-content {
+      padding: var(--spacing-medium);
+      max-width: 700px;
+      word-break: break-all;
+    }
+  }
+}
